[package]
name = "understand"
version = "0.1.0"
authors = ["saruman9 <rum.274.4@gmail.com>"]

description = "SciTools Understand API bindings for Rust"
repository = "https://gitlab.com/saruman9/understand-rust"
readme = "README.md"
keywords = ["understand", "scitools", "analyzer", "API"]
license = "MIT"

[dependencies]
log = "0.3"
time = "0.1"

[dependencies.understand-sys]
path = "understand-sys"
version = "0.1.0"

[lib]
name = "understand"
